[package]
name = "lot"
version = "0.1.1"
edition = "2024"
description = "Rust Load Testing Library"
license = "MIT"
repository = "https://github.com/95th/lot"
authors = ["Gurwinder Singh <vargwin@gmail.com>"]

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.22", features = ["hickory-dns"] }
tokio = { version = "1.46.1", features = ["full"] }
