[package]
name = "lot"
version = "0.3.1"
edition = "2024"
description = "Rust Load Testing Library"
license = "MIT"
repository = "https://github.com/95th/lot"
authors = ["Gurwinder Singh <vargwin@gmail.com>"]

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1.46.1", default-features = false, features = ["rt", "macros", "time", "sync"] }
